syntax = "proto3";

option csharp_namespace = "ZodiacSignService";

package zodiacSigns;

service ZodiacSignsService {
	rpc Send (ZodiacRequest) returns (ZodiacResponse);
}

message ZodiacRequest {
	string birthDate = 1;
}

message ZodiacResponse {
	string sign = 1;
}